# stateMachine

./: .gitignore  CMakeCache.txt  CMakeLists.txt  assetManager.cpp  assetManager.hpp  definitions.hpp  enumsStructs.hpp  game.cpp  game.hpp  inputManager.cpp  inputManager.hpp  main.cpp  main.hpp  splashState.hpp  state.hpp  stateMachine.cpp  stateMachine.hpp
characters/: character.cpp  character.hpp  player.cpp  player.hpp
items/: item.cpp  item.hpp
states/: characterCreationState.cpp  characterCreationState.hpp  mainMenuState.cpp  mainMenuState.hpp  splashState.cpp  splashState.hpp
